# Modbus-Gateway

./: .gitignore  AZURE_IOT_COMMANDS.md  BUILD_ERRORS_FIX.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CODE_REVIEW_FIXES.md  CORS_FIX_EXPLAINED.md  FINAL_FIRMWARE_SUMMARY.md  FINAL_INTEGRATION_FIXES.md  FLASHING_GUIDE.md  HARDWARE_CONNECTIONS.md  IMPLEMENTATION_NOTES.md  LESSON_CODE_EDITING_BEST_PRACTICES.md  NVS_DEFAULTS_UPDATE.md  PHASE1_COMPLETION_REPORT.md  PRODUCTION_GUIDE.md  PRODUCTION_README.md  QUICK_START_INTEGRATION.md  README.md  RELEASE_NOTES.md  SENSOR_RESET_GUIDE.md  SIGNAL_STRENGTH_INTEGRATION_STATUS.md  TODO_CHECKLIST_ANALYSIS.md  VERSION.md  WEB_API_INTEGRATION_GUIDE.md  WEB_UI_INTEGRATION_COMPLETE.md  WEB_UI_NETWORK_MODE.md  add_nvs_defaults.sh  build_esp32.bat  build_esp32.ps1  build_instructions.txt  debug_test_rs485.html  final_json_update.sed  fix_json_templates.py  flash_firmware.bat  idf_component.yml  level_sensor_fix.md  main.py  partitions_4mb.csv  (+19 more)
main/: CMakeLists.txt  a7670c_http.c  a7670c_http.h  a7670c_ppp.c  a7670c_ppp.h  auth.c  auth.h  azure_ca_cert.pem  ds3231_rtc.c  ds3231_rtc.h  idf_component.yml  iot_configs.h  json_templates.c  json_templates.c.bak2  json_templates.c.bak3  json_templates.c.working  json_templates.h  main.c  modbus.c  modbus.h  network_stats.h  ota_update.c  ota_update.h  provisioning.c  provisioning.h  sd_card_logger.c  sd_card_logger.h  sensor_manager.c  sensor_manager.h  telegram_bot.c  telegram_bot.h  web_config.c  web_config.c.nvs_backup  web_config.h  web_wake.c  web_wake.h  wireguard_client.c  ws_server.c  (+1 more)
(+121 files in other folders)
